Closed
Bug 680786
Opened 14 years ago
Closed 14 years ago
Firefox4 and later hangs while displaying large page with many copies of an icon
Categories
(Core :: Layout, defect, P1)
Tracking
()
RESOLVED
FIXED
mozilla9
People
(Reporter: alice0775, Assigned: bzbarsky)
References
()
Details
(Keywords: regression)
Attachments
(3 files)
Build Identifier:
http://hg.mozilla.org/mozilla-central/rev/6dc468c41136
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:9.0a1) Gecko/20110821 Firefox/9.0a1 ID:20110821030758
I was encountered a problem while I tested Bug 680767.
The Bug 680767 is mentioned for Firefox3.6 linux.
But this is Firefox4.0 and later version.
Firefox4.0 and later version is almost hang up.
On the other hand, Firefox3.6.20, Initial page is displayed within about 10 sec.
Tested with @2.5GHz Core2Quad.
I found a regression range with attachment.
Regression range(cached m-c hourly)
Fast(initial page is displayed within about 10 sec/@2.5GHz Core2Quad):
http://hg.mozilla.org/mozilla-central/rev/5f857be14db9
Mozilla/5.0 (Windows; Windows NT 6.1; WOW64; rv:2.0b3pre) Gecko/20100727 Minefield/4.0b3pre ID:20100728145944
Very slow(browser almost hang up):
http://hg.mozilla.org/mozilla-central/rev/b8b62b351c09
Mozilla/5.0 (Windows; Windows NT 6.1; WOW64; rv:2.0b3pre) Gecko/20100728 Minefield/4.0b3pre ID:20100728152620
Pushlog:
http://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=5f857be14db9&tochange=b8b62b351c09
Triggered by:
Bug 572520 - make all imgIDecoderObserver notifications asynchronous
| Reporter | ||
Comment 1•14 years ago
|
||
I got the log in the following procedures
Open the file
Wait about 20 sec.
Brake debugger
| Reporter | ||
Updated•14 years ago
|
| Reporter | ||
Updated•14 years ago
|
Summary: firefox eats cpu and ram while displaying ftp directory → Firefox4 and later hangs while displaying ftp directory
| Reporter | ||
Comment 2•14 years ago
|
||
This also happen on Linux build with attachment 554748 [details] .
http://hg.mozilla.org/mozilla-central/rev/6dc468c41136
Mozilla/5.0 (X11; Linux i686; rv:9.0a1) Gecko/20110821 Firefox/9.0a1 ID:20110821030758
OS: Windows 7 → All
| Assignee | ||
Comment 3•14 years ago
|
||
So I think there may be two things going on here:
1) The async OnStartContainer triggers an unconditional reflow request in
nsImageFrame::OnStartContainer which requires us to find the right frame,
etc. I have a fix for that.
2) The async OnStopRequest means that we hit FindUnfinishedRequestCallback in
the docloader for each of the image requests while a bunch of other image
requests are in the hashtable. Of course none of these have any status
message, so the whole operation is pointless. This is covered by bug
642551.
Alice0775, are you willing to retest with the patches I'm about to upload here and in bug 642551?
Depends on: 642551
Summary: Firefox4 and later hangs while displaying ftp directory → Firefox4 and later hangs while displaying large page with many copies of an icon
| Assignee | ||
Comment 4•14 years ago
|
||
| Assignee | ||
Updated•14 years ago
|
Assignee: nobody → bzbarsky
Priority: -- → P1
Whiteboard: [need review]
| Assignee | ||
Updated•14 years ago
|
Attachment #554968 -
Flags: review?(roc)
Attachment #554968 -
Flags: review?(roc) → review+
| Reporter | ||
Comment 5•14 years ago
|
||
(In reply to Boris Zbarsky (:bz) from comment #3)
>
> Alice0775, are you willing to retest with the patches I'm about to upload
> here and in bug 642551?
I built in locally and tested on Windows7 i686
Built from changeset 1720b28e3115 + attachment 554968 [details] [diff] [review] + attachment 554969 [details] [diff] [review] : it works very well.And initial page(attachment 554748 [details]) is displayed within about 10 sec.
| Assignee | ||
Comment 6•14 years ago
|
||
Thank you for checking that!
Whiteboard: [need review] → [need landing]
| Assignee | ||
Comment 7•14 years ago
|
||
Flags: in-testsuite?
Whiteboard: [need landing]
Target Milestone: --- → mozilla9
Comment 8•14 years ago
|
||
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•