Bug 680786.  nsImageFrame::OnStartContainer should not assume that its intrinsic size has changed.  r=roc